k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cctv-backend
spec:
  selector:
    matchLabels:
      app: cctv-backend
  replicas: 1
  template:
    metadata:
      labels:
        app: cctv-backend
    spec:
      containers:
        - name: cctv-backend
          image: us-docker.pkg.dev/cctc-353018/docker-1/cctv-backend:master
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: google-cloud-key
              mountPath: /var/secrets/google
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
              ephemeral-storage: 1Gi
            limits:
              cpu: 500m
              memory: 1Gi
              ephemeral-storage: 1Gi
      volumes:
        - name: google-cloud-key
          secret:
            secretName: service-account-key
