k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cctv-backend
spec:
  selector:
    app: cctv-backend
  ports:
    - port: 5000
      protocol: TCP
      targetPort: 5000
